--- a/b_fast_ahmed/b-fast/mainwindow.ui
+++ b/b_fast_ahmed/b-fast/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>2000</width>
-    <height>1352</height>
+    <height>1325</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>50</y>
+      <y>30</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -39,7 +39,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>30</y>
+      <y>10</y>
       <width>261</width>
       <height>31</height>
      </rect>
@@ -47,7 +47,9 @@
     <property name="font">
      <font>
       <family>Sitka Small</family>
-      <pointsize>12</pointsize>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="autoFillBackground">
@@ -60,68 +62,36 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>1840</x>
-      <y>40</y>
-      <width>121</width>
-      <height>51</height>
+      <x>1450</x>
+      <y>30</y>
+      <width>111</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>Deconnexion</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>20</y>
-      <width>71</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>resources/captain (3).png</pixmap>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>1670</x>
-      <y>40</y>
-      <width>121</width>
-      <height>51</height>
+      <x>1330</x>
+      <y>30</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>Parametres</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>940</x>
-      <y>-50</y>
-      <width>231</width>
-      <height>211</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>resources/logo 100.png</pixmap>
-    </property>
-   </widget>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>100</y>
+      <y>80</y>
       <width>2001</width>
-      <height>1251</height>
+      <height>1271</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -131,10 +101,10 @@
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
-        <x>1240</x>
-        <y>530</y>
-        <width>731</width>
-        <height>681</height>
+        <x>930</x>
+        <y>240</y>
+        <width>811</width>
+        <height>791</height>
        </rect>
       </property>
       <property name="font">
@@ -152,12 +122,12 @@
         <rect>
          <x>0</x>
          <y>30</y>
-         <width>731</width>
-         <height>651</height>
+         <width>771</width>
+         <height>721</height>
         </rect>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="page_6">
         <widget class="QTableView" name="tableView">
@@ -165,17 +135,17 @@
           <rect>
            <x>0</x>
            <y>40</y>
-           <width>731</width>
-           <height>551</height>
+           <width>651</width>
+           <height>281</height>
           </rect>
          </property>
         </widget>
         <widget class="QPushButton" name="pushButton_9">
          <property name="geometry">
           <rect>
-           <x>200</x>
-           <y>600</y>
-           <width>181</width>
+           <x>160</x>
+           <y>330</y>
+           <width>151</width>
            <height>41</height>
           </rect>
          </property>
@@ -193,9 +163,9 @@
         <widget class="QPushButton" name="pushButton_10">
          <property name="geometry">
           <rect>
-           <x>390</x>
-           <y>600</y>
-           <width>181</width>
+           <x>320</x>
+           <y>330</y>
+           <width>151</width>
            <height>41</height>
           </rect>
          </property>
@@ -213,8 +183,8 @@
         <widget class="QPushButton" name="pushButton_11">
          <property name="geometry">
           <rect>
-           <x>580</x>
-           <y>600</y>
+           <x>510</x>
+           <y>330</y>
            <width>131</width>
            <height>41</height>
           </rect>
@@ -237,9 +207,9 @@
         <widget class="QPushButton" name="pushButton_8">
          <property name="geometry">
           <rect>
-           <x>10</x>
-           <y>600</y>
-           <width>181</width>
+           <x>0</x>
+           <y>330</y>
+           <width>151</width>
            <height>41</height>
           </rect>
          </property>
@@ -260,49 +230,49 @@
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>250</y>
+           <y>160</y>
            <width>341</width>
            <height>31</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>14</pointsize>
+           <pointsize>9</pointsize>
            <weight>50</weight>
            <bold>false</bold>
           </font>
          </property>
          <property name="text">
-          <string>Expiration date</string>
+          <string>Date d'expiration</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_21">
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>50</y>
+           <y>-20</y>
            <width>431</width>
            <height>91</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>14</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
            <underline>true</underline>
           </font>
          </property>
          <property name="text">
-          <string>Subscriber's ID:</string>
+          <string>ID Abonnee:</string>
          </property>
         </widget>
         <widget class="QLineEdit" name="lineEdit_8">
          <property name="geometry">
           <rect>
-           <x>360</x>
-           <y>130</y>
-           <width>311</width>
+           <x>220</x>
+           <y>50</y>
+           <width>251</width>
            <height>41</height>
           </rect>
          </property>
@@ -310,9 +280,9 @@
         <widget class="QLineEdit" name="lineEdit_9">
          <property name="geometry">
           <rect>
-           <x>360</x>
-           <y>250</y>
-           <width>311</width>
+           <x>220</x>
+           <y>150</y>
+           <width>251</width>
            <height>41</height>
           </rect>
          </property>
@@ -320,9 +290,9 @@
         <widget class="QLineEdit" name="lineEdit_10">
          <property name="geometry">
           <rect>
-           <x>360</x>
-           <y>190</y>
-           <width>311</width>
+           <x>220</x>
+           <y>100</y>
+           <width>251</width>
            <height>41</height>
           </rect>
          </property>
@@ -330,19 +300,19 @@
         <widget class="QLineEdit" name="lineEdit_11">
          <property name="geometry">
           <rect>
-           <x>360</x>
-           <y>370</y>
-           <width>311</width>
-           <height>111</height>
+           <x>220</x>
+           <y>250</y>
+           <width>251</width>
+           <height>41</height>
           </rect>
          </property>
         </widget>
         <widget class="QComboBox" name="comboBox_3">
          <property name="geometry">
           <rect>
-           <x>360</x>
-           <y>500</y>
-           <width>311</width>
+           <x>220</x>
+           <y>300</y>
+           <width>251</width>
            <height>41</height>
           </rect>
          </property>
@@ -353,54 +323,54 @@
          </property>
          <item>
           <property name="text">
-           <string>Select line ID</string>
+           <string>Selectez ligne ID</string>
           </property>
          </item>
         </widget>
         <widget class="QPushButton" name="pushButton_17">
          <property name="geometry">
           <rect>
-           <x>150</x>
-           <y>550</y>
-           <width>431</width>
-           <height>71</height>
+           <x>480</x>
+           <y>300</y>
+           <width>141</width>
+           <height>41</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>12</pointsize>
+           <pointsize>7</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>Add Subscription</string>
+          <string>Ajouter une abonnement</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_22">
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>360</y>
+           <y>240</y>
            <width>331</width>
            <height>51</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>14</pointsize>
+           <pointsize>9</pointsize>
            <weight>50</weight>
            <bold>false</bold>
           </font>
          </property>
          <property name="text">
-          <string>Description</string>
+          <string>description</string>
          </property>
         </widget>
         <widget class="QLineEdit" name="lineEdit_12">
          <property name="geometry">
           <rect>
-           <x>360</x>
-           <y>310</y>
-           <width>311</width>
+           <x>220</x>
+           <y>200</y>
+           <width>251</width>
            <height>41</height>
           </rect>
          </property>
@@ -409,74 +379,74 @@
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>490</y>
+           <y>290</y>
            <width>341</width>
            <height>61</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>14</pointsize>
+           <pointsize>9</pointsize>
            <weight>50</weight>
            <bold>false</bold>
           </font>
          </property>
          <property name="text">
-          <string>Line ID</string>
+          <string>ID ligne</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_24">
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>310</y>
+           <y>210</y>
            <width>371</width>
            <height>31</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>14</pointsize>
+           <pointsize>9</pointsize>
            <weight>50</weight>
            <bold>false</bold>
           </font>
          </property>
          <property name="text">
-          <string>Starting date</string>
+          <string>Date de debut</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_25">
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>190</y>
+           <y>100</y>
            <width>431</width>
            <height>31</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>14</pointsize>
+           <pointsize>9</pointsize>
            <weight>50</weight>
            <bold>false</bold>
           </font>
          </property>
          <property name="text">
-          <string>Name:</string>
+          <string>Nom</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_26">
          <property name="geometry">
           <rect>
            <x>40</x>
-           <y>130</y>
+           <y>50</y>
            <width>351</width>
            <height>31</height>
           </rect>
          </property>
          <property name="font">
           <font>
-           <pointsize>15</pointsize>
+           <pointsize>11</pointsize>
           </font>
          </property>
          <property name="text">
@@ -486,30 +456,10 @@
         <widget class="QPushButton" name="pushButton_18">
          <property name="geometry">
           <rect>
-           <x>580</x>
-           <y>20</y>
+           <x>490</x>
+           <y>50</y>
            <width>131</width>
-           <height>51</height>
-          </rect>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-           <weight>50</weight>
-           <bold>false</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>Go Back</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pushButton_19">
-         <property name="geometry">
-          <rect>
-           <x>580</x>
-           <y>80</y>
-           <width>131</width>
-           <height>41</height>
+           <height>31</height>
           </rect>
          </property>
          <property name="font">
@@ -520,7 +470,27 @@
           </font>
          </property>
          <property name="text">
-          <string>Clear</string>
+          <string>Retour</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="pushButton_19">
+         <property name="geometry">
+          <rect>
+           <x>490</x>
+           <y>100</y>
+           <width>131</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>8</pointsize>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Effacer</string>
          </property>
         </widget>
        </widget>
@@ -769,15 +739,17 @@
      <widget class="QPushButton" name="pushButton_3">
       <property name="geometry">
        <rect>
-        <x>1270</x>
-        <y>70</y>
+        <x>930</x>
+        <y>40</y>
         <width>651</width>
-        <height>81</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
        </font>
       </property>
       <property name="text">
@@ -787,15 +759,17 @@
      <widget class="QPushButton" name="pushButton_5">
       <property name="geometry">
        <rect>
-        <x>1270</x>
-        <y>300</y>
+        <x>930</x>
+        <y>140</y>
         <width>651</width>
-        <height>81</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
        </font>
       </property>
       <property name="text">
@@ -805,15 +779,17 @@
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>1270</x>
-        <y>420</y>
+        <x>930</x>
+        <y>190</y>
         <width>651</width>
-        <height>81</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
        </font>
       </property>
       <item>
@@ -840,15 +816,17 @@
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>1270</x>
-        <y>190</y>
+        <x>930</x>
+        <y>90</y>
         <width>651</width>
-        <height>81</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
        </font>
       </property>
       <property name="text">
@@ -860,13 +838,13 @@
        <rect>
         <x>20</x>
         <y>10</y>
-        <width>1191</width>
-        <height>1201</height>
+        <width>891</width>
+        <height>621</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>24</pointsize>
+        <pointsize>18</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -878,10 +856,17 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>1140</y>
+         <y>560</y>
          <width>91</width>
          <height>51</height>
         </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
        </property>
        <property name="text">
         <string/>
@@ -895,18 +880,25 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>90</y>
-         <width>1191</width>
-         <height>1041</height>
+         <y>70</y>
+         <width>881</width>
+         <height>481</height>
         </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
        </property>
       </widget>
       <widget class="QPlainTextEdit" name="plainTextEdit">
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>1140</y>
-         <width>601</width>
+         <y>560</y>
+         <width>311</width>
          <height>51</height>
         </rect>
        </property>
@@ -924,15 +916,17 @@
       <widget class="QComboBox" name="comboBox_2">
        <property name="geometry">
         <rect>
-         <x>730</x>
-         <y>1140</y>
-         <width>251</width>
+         <x>440</x>
+         <y>560</y>
+         <width>261</width>
          <height>51</height>
         </rect>
        </property>
        <property name="font">
         <font>
-         <pointsize>12</pointsize>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
         </font>
        </property>
        <item>
@@ -954,15 +948,17 @@
       <widget class="QPushButton" name="pushButton_6">
        <property name="geometry">
         <rect>
-         <x>1000</x>
-         <y>1140</y>
+         <x>710</x>
+         <y>560</y>
          <width>171</width>
          <height>51</height>
         </rect>
        </property>
        <property name="font">
         <font>
-         <pointsize>13</pointsize>
+         <pointsize>11</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
